# flow-scalability-evaluation-scripts

./: .gitignore  README.md  config.yml  pyproject.toml
data/flows/airbnb/: book_airbnb.yml  cancel_airbnb.yml  list_airbnbs.yml  list_booked_airbnb_accommodations.yml  show_airbnb_review.yml
data/flows/bus/: book_bus_ticket.yml  cancel_bus_ticket.yml  filter_bus_trips.yml  list_booked_bus_tickets.yml
data/flows/car/: change_car_rental.yml  change_car_rental_car_type.yml  list_car_rental_companies.yml  list_rental_vehicles.yml  rent_a_car.yml  show_car_rental_company_review.yml  show_car_rental_policies.yml
data/flows/flight/: book_flight_ticket.yml  cancel_flight.yml  list_booked_flight_tickets.yml  show_flight_amenities_info.yml  show_flight_luggage_info.yml
data/flows/hotel/: book_hotel.yml  cancel_hotel.yml  list_booked_hotel_accommodations.yml  list_hotels.yml  show_hotel_amenities_info.yml  show_hotel_review.yml
data/flows/train/: book_train_ticket.yml  cancel_train_ticket.yml  list_booked_train_tickets.yml
data/flows/transactions/: process_refunds.yml
data/flows/travel_package/: book_a_travel_package.yml  (+2 more)
domain/: airbnb.yml  bus.yml  car.yml  flight.yml  hotel.yml  train.yml  travel_package.yml
domain/transactions/: process_refund.yml
evaluation_data/: airbnb.yml  bus.yml  car.yml  flight.yml  hotel.yml  train.yml  travel_package.yml
evaluation_data/ambiquity/: book_place_to_stay.yml  book_transport_ticket.yml  canceling.yml  list_bought_transport_tickets.yml
scripts/: evaluate_flow_scalibility.sh  io.py  run_and_evaluate.py
